# package

./: .coverage  .gitignore  README.md  pyproject.toml  tests.md
.chainlink/: issues.db
examples/: README.md  formal_validation.py  heteroscedasticity_calibration.py  visual_examples.ipynb
src/kernel_regression/: __init__.py  diagnostics.py  estimators.py
src/kernel_regression.egg-info/: PKG-INFO  SOURCES.txt
