[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-regression"
version = "0.1.0"
description = "Multivariate Nadaraya-Watson and Local Polynomial Kernel Regression with sklearn interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]
# SECURITY: CVE-2025-53000 - nbconvert has Windows code execution vulnerability
# On Windows, converting notebooks with SVG to PDF executes malicious inkscape.bat
# from current directory. No patch available as of Jan 2025.
# See: https://github.com/advisories/GHSA-xm59-rqc7-hhvf
#
# notebooks extra BLOCKED until nbconvert releases a fix (>=7.16.7)
# Use notebooks-hierarchical if you accept the risk on Windows
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "notebook>=6.4.0",
    "nbconvert>=7.16.7",  # SECURITY: blocks install until CVE-2025-53000 is patched
]
# WARNING: This extra installs vulnerable nbconvert. Only use if:
# 1. You are NOT on Windows, OR
# 2. You will NOT run `jupyter nbconvert --to pdf` on untrusted notebooks
notebooks-hierarchical = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "notebook>=6.4.0",
    # nbconvert<=7.16.6 has CVE-2025-53000 (Windows code execution)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/kernel_regression --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests"]
